--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^3.2.0",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
