--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
+    "mongo": "^0.1.0",
+    "mongodb": "^3.1.13",
     "ngx-bootstrap": "^3.2.0",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
