--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "mongodb": "^3.1.13",
     "ngx-bootstrap": "^3.2.0",
     "path": "^0.12.7",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
