--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
     "mongodb": "^3.2.2",
+    "mongoose": "^5.4.20",
     "ngx-bootstrap": "^3.2.0",
     "path": "^0.12.7",
     "rxjs": "^6.3.3",
