--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "node app.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -32,6 +32,8 @@
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.20",
     "ngx-bootstrap": "^3.2.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
