--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "rxjs": "^6.3.3",
+    "serve-favicon": "^2.5.0",
     "tslib": "^1.9.0",
     "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
