--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
