--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@types/chart.js": "^2.7.50",
+    "angular-bootstrap-md": "^7.4.4",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
     "mongodb": "^3.2.2",
